edit for local env

--- a/config/syslog-ng.conf
+++ b/config/syslog-ng.conf
@@ -10,7 +10,7 @@
 #  docker run ...  -v "$PWD/syslog-ng.conf":/etc/syslog-ng/syslog-ng.conf
 #
 
-@version: 3.29
+@version: 4.8
 @include "scl.conf"
 
 source s_local {
@@ -28,6 +28,11 @@ source s_network {
 		#
 		#tls(key-file("/path/to/ssl-private-key") cert-file("/path/to/ssl-cert"))
 	);
+#	network(
+#		ip("192.168.40.21")
+#		transport("udp")
+#		port(514)
+#	);
 };
 
 destination d_loki {
