--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,7 +23,7 @@ services:
       GF_AUTH_BASIC_ENABLED: "false"
       GF_AUTH_DISABLE_LOGIN_FORM: "true"
       GF_DASHBOARDS_DEFAULT_HOME_DASHBOARD_PATH: /var/lib/grafana/dashboards/no_folder/loki_syslog_aio_overview.json
-    image: grafana/grafana:8.1.2
+    image: grafana/grafana:latest
     networks:
       loki: null
     ports:
@@ -40,7 +40,7 @@ services:
     container_name: loki
     depends_on:
     - minio
-    image: grafana/loki:2.3.0
+    image: grafana/loki:latest
     networks:
       loki: null
     ports:
@@ -100,13 +100,10 @@ services:
     ports:
     - published: 9090
       target: 9090
-    restart: always
-    volumes:
-    - ./config/prometheus.yml:/etc/prometheus/prometheus.yml:ro
-  promtail:
+    restart: alwayscc
     command: -config.file=/etc/promtail/promtail-config.yml
     container_name: promtail
-    image: grafana/promtail:2.3.0
+    image: grafana/promtail:latest
     networks:
       loki: null
     ports:
@@ -137,4 +134,3 @@ services:
     restart: always
     volumes:
     - ./config/syslog-ng.conf:/etc/syslog-ng/syslog-ng.conf:ro
-version: '3.3'
