--- a/docker-compose-filesystem.yml
+++ b/docker-compose-filesystem.yml
@@ -9,7 +9,7 @@ services:
       GF_AUTH_BASIC_ENABLED: "false"
       GF_AUTH_DISABLE_LOGIN_FORM: "true"
       GF_DASHBOARDS_DEFAULT_HOME_DASHBOARD_PATH: /var/lib/grafana/dashboards/no_folder/loki_syslog_aio_overview.json
-    image: grafana/grafana:8.1.2
+    image: grafana/grafana:latest
     networks:
       loki: null
     ports:
@@ -24,7 +24,7 @@ services:
   loki:
     command: -config.file=/etc/loki/loki-config.yml
     container_name: loki
-    image: grafana/loki:2.3.0
+    image: grafana/loki:latest
     networks:
       loki: null
     ports:
@@ -37,7 +37,7 @@ services:
   promtail:
     command: -config.file=/etc/promtail/promtail-config.yml
     container_name: promtail
-    image: grafana/promtail:2.3.0
+    image: grafana/promtail:latest
     networks:
       loki: null
     ports:
@@ -68,4 +68,3 @@ services:
     restart: always
     volumes:
     - ./config/syslog-ng.conf:/etc/syslog-ng/syslog-ng.conf:ro
-version: '3.3'
